; ModuleID = '/home/carl/AnghaBench/linux/sound/pci/lola/extr_lola_pcm.c_lola_pcm_hw_params.c'
source_filename = "/home/carl/AnghaBench/linux/sound/pci/lola/extr_lola_pcm.c_lola_pcm_hw_params.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_pcm_substream = type { i32 }
%struct.snd_pcm_hw_params = type { i32 }
%struct.lola_stream = type { i64, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_pcm_substream*, %struct.snd_pcm_hw_params*)* @lola_pcm_hw_params to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lola_pcm_hw_params(%struct.snd_pcm_substream* %0, %struct.snd_pcm_hw_params* %1) #0 {
  %3 = alloca %struct.snd_pcm_substream*, align 8
  %4 = alloca %struct.snd_pcm_hw_params*, align 8
  %5 = alloca %struct.lola_stream*, align 8
  store %struct.snd_pcm_substream* %0, %struct.snd_pcm_substream** %3, align 8
  store %struct.snd_pcm_hw_params* %1, %struct.snd_pcm_hw_params** %4, align 8
  %6 = load %struct.snd_pcm_substream*, %struct.snd_pcm_substream** %3, align 8
  %7 = call %struct.lola_stream* @lola_get_stream(%struct.snd_pcm_substream* %6)
  store %struct.lola_stream* %7, %struct.lola_stream** %5, align 8
  %8 = load %struct.lola_stream*, %struct.lola_stream** %5, align 8
  %9 = getelementptr inbounds %struct.lola_stream, %struct.lola_stream* %8, i32 0, i32 2
  store i64 0, i64* %9, align 8
  %10 = load %struct.lola_stream*, %struct.lola_stream** %5, align 8
  %11 = getelementptr inbounds %struct.lola_stream, %struct.lola_stream* %10, i32 0, i32 1
  store i64 0, i64* %11, align 8
  %12 = load %struct.lola_stream*, %struct.lola_stream** %5, align 8
  %13 = getelementptr inbounds %struct.lola_stream, %struct.lola_stream* %12, i32 0, i32 0
  store i64 0, i64* %13, align 8
  %14 = load %struct.snd_pcm_substream*, %struct.snd_pcm_substream** %3, align 8
  %15 = load %struct.snd_pcm_hw_params*, %struct.snd_pcm_hw_params** %4, align 8
  %16 = call i32 @params_buffer_bytes(%struct.snd_pcm_hw_params* %15)
  %17 = call i32 @snd_pcm_lib_malloc_pages(%struct.snd_pcm_substream* %14, i32 %16)
  ret i32 %17
}

declare dso_local %struct.lola_stream* @lola_get_stream(%struct.snd_pcm_substream*) #1

declare dso_local i32 @snd_pcm_lib_malloc_pages(%struct.snd_pcm_substream*, i32) #1

declare dso_local i32 @params_buffer_bytes(%struct.snd_pcm_hw_params*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
